--- a/posts/Takeaways-19/index.qmd
+++ b/posts/Takeaways-19/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Lesson 19 take-home points"
+title: "Lesson 19 take-aways"
 author: "Daniel Kaplan"
 date: "2023-03-04"
 categories: [Class sessions, variance]
